# resume-reader

./: .gitignore  KANDACE_LOUDOR.md  KANDACE_LOUDOR_new.md  README.md  app.py  config.json  pdf-reader.ipynb  pdf_processor.py  practice_file.ipynb  pyproject.toml  resume-scorer.ipynb  scoring_processor.py
